Portfolio/sass/layouts/_footer.scss
@use '../abstract' as *;

.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 20px;
  padding: 40px 0 0 0;
}


.form {
  display: flex;
  align-items: center;
  padding: 0px 20px;
  gap: 8px;

  @include media-mobile {
    flex-direction: column;
  }
}

.form input {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 60px;
  width: 380px;
  max-width: 380px;
  padding: 0 12px;
  border: 1px solid $color-dark;
  color: $color-dark;
  text-transform: uppercase;
  font-family: 'Oswald';
  @include font($size: 1.6rem, $height: 2.4rem);

  @include media-tablet {
    width: 256px;
  }

  @include media-mobile {
    width: 340px;
  }
}


.form input:hover {
  border: 1px solid $color-red;
  color: $color-dark;
  @extend %transition;
}


.form input:focus {
  outline: none;
  border: 1px solid $color-red;
  color: $color-dark;
  @extend %transition;
}

@include media-touch {
  .form input {
    transition: none !important;
    animation: none !important;

    &:hover {
      border: 1px solid $color-dark;
      transition: none !important;
    }

    &:focus {
      border: 1px solid $color-dark;
      transition: none !important;
    }
  }
}



.form input::placeholder {
  color: $color-grey;
  text-transform: uppercase;
  font-family: 'Oswald';
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}



.footer__navigation {
  display: flex;
  flex-direction: row;
  padding: 20px;
  justify-content: center;
  align-items: center;
  min-height: 100px;
  width: 100%;
  list-style: none;
  font-family: 'Oswald';
  @include font($weight: 400, $height: 2.4rem, $size: 1.6rem);
  text-transform: uppercase;




  ul {
    display: flex;
    list-style: none;
    justify-content: center;
    align-items: center;

    @include media-mobile {
      flex-direction: column;


      li {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 0 20px;
        height: 60px;
      }
    }
  }

  button {
    width: 200px;
    min-width: 200px;
    height: 60px;

    @include media-mobile {
      width: 340px;
    }
  }
}

